--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "license": "MIT",
   "scripts": {
     "docs:dev": "vitepress dev docs",
-    "docs:build": "vitepress build docs && mv docs/.vitepress/dist dist",
+    "docs:build": "vitepress build docs --mpa && mv docs/.vitepress/dist dist",
     "docs:serve": "vitepress serve docs"
   },
   "devDependencies": {
     "markdown-it-task-lists": "^2.1.1",
-    "vitepress": "^0.16.1"
+    "vitepress": "^0.18.0"
   },
   "dependencies": {}
 }
