--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -18,13 +18,14 @@ jobs:
 
       - name: Cache dependencies
         uses: actions/cache@v2
+　　　　　id: yarn-cache
         with:
-          path: ~/.cache/yarn
+          path:  ${{ steps.yarn-cache-dir-path.outputs.dir }}
           key: ${{ runner.os }}-node-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
             ${{ runner.os }}-node-
       - name: install
-        if: steps.cache.outputs.cache-hit != 'true'
+        if: steps.yarn-cache.outputs.cache-hit != 'true'
         run: yarn install
 
       - name: build
