--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "devDependencies": {
     "markdown-it-task-lists": "^2.1.1",
-    "vitepress": "^0.18.0"
+    "vitepress": "^0.19.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "markdown-it-container": "^3.0.0"
+  }
 }
