--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "docs:dev": "vitepress dev docs",
-    "docs:build": "vitepress build docs --mpa && mv docs/.vitepress/dist dist",
+    "docs:build": "vitepress build docs && mv docs/.vitepress/dist dist",
     "docs:serve": "vitepress serve docs"
   },
   "devDependencies": {
